; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/usp10/extr_opentype.c_OpenType_apply_GPOS_lookup.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/usp10/extr_opentype.c_OpenType_apply_GPOS_lookup.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i64 }
%struct.TYPE_6__ = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @OpenType_apply_GPOS_lookup(%struct.TYPE_5__* %0, i32* %1, i32* %2, i32* %3, i32* %4, i32 %5, i32* %6, i32 %7, i32 %8, i32* %9) #0 {
  %11 = alloca %struct.TYPE_5__*, align 8
  %12 = alloca i32*, align 8
  %13 = alloca i32*, align 8
  %14 = alloca i32*, align 8
  %15 = alloca i32*, align 8
  %16 = alloca i32, align 4
  %17 = alloca i32*, align 8
  %18 = alloca i32, align 4
  %19 = alloca i32, align 4
  %20 = alloca i32*, align 8
  %21 = alloca %struct.TYPE_6__*, align 8
  %22 = alloca i32*, align 8
  store %struct.TYPE_5__* %0, %struct.TYPE_5__** %11, align 8
  store i32* %1, i32** %12, align 8
  store i32* %2, i32** %13, align 8
  store i32* %3, i32** %14, align 8
  store i32* %4, i32** %15, align 8
  store i32 %5, i32* %16, align 4
  store i32* %6, i32** %17, align 8
  store i32 %7, i32* %18, align 4
  store i32 %8, i32* %19, align 4
  store i32* %9, i32** %20, align 8
  %23 = load %struct.TYPE_5__*, %struct.TYPE_5__** %11, align 8
  %24 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %23, i32 0, i32 0
  %25 = load i64, i64* %24, align 8
  %26 = inttoptr i64 %25 to %struct.TYPE_6__*
  store %struct.TYPE_6__* %26, %struct.TYPE_6__** %21, align 8
  %27 = load %struct.TYPE_6__*, %struct.TYPE_6__** %21, align 8
  %28 = bitcast %struct.TYPE_6__* %27 to i32*
  %29 = load %struct.TYPE_6__*, %struct.TYPE_6__** %21, align 8
  %30 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %29, i32 0, i32 0
  %31 = load i32, i32* %30, align 4
  %32 = call i32 @GET_BE_WORD(i32 %31)
  %33 = sext i32 %32 to i64
  %34 = getelementptr inbounds i32, i32* %28, i64 %33
  store i32* %34, i32** %22, align 8
  %35 = load %struct.TYPE_5__*, %struct.TYPE_5__** %11, align 8
  %36 = load i32*, i32** %12, align 8
  %37 = load i32*, i32** %13, align 8
  %38 = load i32*, i32** %14, align 8
  %39 = load i32*, i32** %15, align 8
  %40 = load i32*, i32** %22, align 8
  %41 = load i32, i32* %16, align 4
  %42 = load i32*, i32** %17, align 8
  %43 = load i32, i32* %18, align 4
  %44 = load i32, i32* %19, align 4
  %45 = load i32*, i32** %20, align 8
  %46 = call i32 @GPOS_apply_lookup(%struct.TYPE_5__* %35, i32* %36, i32* %37, i32* %38, i32* %39, i32* %40, i32 %41, i32* %42, i32 %43, i32 %44, i32* %45)
  ret i32 %46
}

declare dso_local i32 @GET_BE_WORD(i32) #1

declare dso_local i32 @GPOS_apply_lookup(%struct.TYPE_5__*, i32*, i32*, i32*, i32*, i32*, i32, i32*, i32, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
